--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,13 @@ dependencies {
     kapt 'com.google.dagger:dagger-android-processor:2.20'
     kapt 'com.google.dagger:dagger-compiler:2.20'
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0"
+
+    //Log Interceptor
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.6.0'
+
+
+    //JSON Parsing
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
 }
